0.1.4
-----
1. When obtaining A..Z lists, pass all orig params (e.g. artist role)
2. Don't add playall/addall entries to A..Z groups.
3. For A..Z group, set max combined group size to 100, and don't split letters
   into multiple groups until 301 or more.
4. Retreive biographies for all artists in now playing info.
5. Change sync dialog to be 'Choose players to sync with $PLAYER'

0.1.3
-----
 1. Fix virtual library handling.
 2. Fix now playing info backdrop for mobile layout.
 3. Change A..Z group sizes. For 500 or less items, size is 50. For 5000 or
    less, size is 100. For 10000 or less, size is 200. Otherwise size is 300
 4. Add support for remote libraries.
 5. Alter link text colour to improve legibility.
 6. Allow setting of active player from Manager Players dialog.
 7. Add toggle button to control whether info in now playing dialog should stay
    in sync with song changes.
 8. Use virtual library ID for A..Z grouping.
 9. Add playall/addall entries to song lists.
10. Move sync control to manage players dialog.
11. Fix desktop volume when change players.

0.1.2
-----
 1. Use _50x50_o for list covers, and _300x300_f for grid covers.
 2. Add scaled image to slideshow list, and only fetch full sized image when
    slideshow active.
 3. Crop list images as per grid images.
 4. Add bitrate and file type to now playing.
 5. Only show year if >0
 6. Add tooltip to grid view items.
 7. Allow grid view text to span multiple lines.
 8. Reduce some font sizes.
 9. Show name of last loaded playlist in queue.
10. Fix listing of playlist tracks.
11. Move 'Manage Players' dialog to player menu.
12. If there are no players detected, then poll server ever second to detect
    players.
13. Smarter polling whilst playing. Only poll every second if in the first or
    last 6 seconds of a track.
14. Change clear queue icon to something (hopefully) more obvious.
15. Fix fetching more than 100 items in queue.